--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
                 <a class="nav-link" href="index.html">About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="Portfolio.html">Portfolio</a>
+                <a class="nav-link" href="portfolio.html">Portfolio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="Contact.html">Contact</a>
+                <a class="nav-link" href="contact.html">Contact</a>
               </li>
             </ul>
           </div>
@@ -57,7 +57,7 @@
             <div class="row">
               <div id = "imgdiv">
                 <img
-                  src="assets/images/studentavatar.jfif"
+                  src="assets/images/studentAvatar.jfif"
                   class="profile-pic"
                   alt="profile picture"
                 />
