--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body class="main-body">
     <header id="main-header">
-      <div class="menu-bar">
+      <div class="menu-bar container">
         <nav class="navbar navbar-expand-lg navbar-light">
           <a href="index.html" id="topbox">James Nelson</a>
           <button
