--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
   <body class="main-body">
     <!--Header Start-->
     <header id="main-header">
-      <div class="menu-bar">
+      <div class="menu-bar container">
         <nav class="navbar navbar-expand-lg navbar-light">
           <a href="index.html" id="topbox">James Nelson</a>
           <button
