--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <div class="row">
               <div id="imgdiv">
                 <img
-                  src="assets/images/studentAvatar.jfif"
+                  src="assets/images/studentAvatar.jpg"
                   class="profile-pic"
                   alt="profile picture"
                 />
