--- a/portfolio.html
+++ b/portfolio.html
@@ -56,31 +56,31 @@
 
         <div class="row">
           <div class="col-md-5 tile">
-            <img src="assets/images/dice.jfif" alt="Dice" />
+            <img src="assets/images/dice.jpg" alt="Dice" />
             <h3>Portfolio</h3>
           </div>
 
           <div class="col-md-5 tile">
-            <img src="assets/images/flap.jfif" alt="Flap" />
+            <img src="assets/images/flap.jpg" alt="Flap" />
             <h3>Flap</h3>
           </div>
         </div>
 
         <div class="row">
           <div class="col-md-5 tile">
-            <img src="assets/images/arcade.jfif" alt="Arcade" />
+            <img src="assets/images/arcade.jpg" alt="Arcade" />
             <h3>Arcade</h3>
           </div>
 
           <div class="col-md-5 tile">
-            <img src="assets/images/jump.jfif" alt="Jump" />
+            <img src="assets/images/jump.jpg" alt="Jump" />
             <h3>Jump</h3>
           </div>
         </div>
 
         <div class="row">
           <div class="col-md-5 tile">
-            <img src="assets/images/ghost.jfif" alt="Ghost" />
+            <img src="assets/images/ghost.jpg" alt="Ghost" />
             <h3>Ghost</h3>
           </div>
         </div>
