updated portfolio images

--- a/portfolio.html
+++ b/portfolio.html
@@ -46,7 +46,7 @@
       </div>
     </header>
 
-    <DIV class="container" id="main">
+    <div class="container" id="main">
       <section class="main-section">
         <div class="row">
           <div class="col-md-12">
@@ -56,36 +56,37 @@
 
         <div class="row">
           <div class="col-md-5 tile">
-            <img src="assets/images/dice.jpg" alt="Dice" />
-            <h3>Portfolio</h3>
+            <img src="assets/images/wanderlust.png" alt="wanderlust logo" />
           </div>
 
           <div class="col-md-5 tile">
-            <img src="assets/images/flap.jpg" alt="Flap" />
-            <h3>Flap</h3>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="col-md-5 tile">
-            <img src="assets/images/arcade.jpg" alt="Arcade" />
-            <h3>Arcade</h3>
-          </div>
-
-          <div class="col-md-5 tile">
-            <img src="assets/images/jump.jpg" alt="Jump" />
-            <h3>Jump</h3>
+            <img
+              src="assets/images/password_generator.png"
+              alt="password generator"
+            />
           </div>
         </div>
 
         <div class="row">
           <div class="col-md-5 tile">
-            <img src="assets/images/ghost.jpg" alt="Ghost" />
-            <h3>Ghost</h3>
+            <img
+              src="assets/images/weather_dashboard.png"
+              alt="weather dashboard"
+            />
+          </div>
+
+          <div class="col-md-5 tile">
+            <img src="assets/images/day_planner.png" alt="day planner" />
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-md-5 tile">
+            <img src="assets/images/coding_quiz.png" alt="coding quiz" />
           </div>
         </div>
       </section>
-    </DIV>
+    </div>
 
     <footer class="footer">
       <div class="container">
