corrected input field for name on contact form

--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@
             <li>
               <label for="name">Name</label>
               <input
-                type="email"
+                type="text"
                 class="form-control"
                 id="name"
                 placeholder="Johnny/Jane Appleseed"
