--- a/portfolio.html
+++ b/portfolio.html
@@ -56,33 +56,43 @@
 
         <div class="row">
           <div class="col-md-5 tile">
-            <img src="assets/images/wanderlust.png" alt="wanderlust logo" />
+            <a href="https://alpinelife37.github.io/Homework07/">
+              <img src="assets/images/wanderlust.png" alt="wanderlust logo" />
+            </a>
           </div>
 
           <div class="col-md-5 tile">
-            <img
-              src="assets/images/password_generator.png"
-              alt="password generator"
-            />
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="col-md-5 tile">
-            <img
-              src="assets/images/weather_dashboard.png"
-              alt="weather dashboard"
-            />
-          </div>
-
-          <div class="col-md-5 tile">
-            <img src="assets/images/day_planner.png" alt="day planner" />
+            <a href="https://alpinelife37.github.io/Homework3/">
+              <img
+                src="assets/images/password_generator.png"
+                alt="password generator"
+              />
+            </a>
           </div>
         </div>
 
         <div class="row">
           <div class="col-md-5 tile">
-            <img src="assets/images/coding_quiz.png" alt="coding quiz" />
+            <a href="https://alpinelife37.github.io/Homework6/">
+              <img
+                src="assets/images/weather_dashboard.png"
+                alt="weather dashboard"
+              />
+            </a>
+          </div>
+
+          <div class="col-md-5 tile">
+            <a href="https://alpinelife37.github.io/Homework5/">
+              <img src="assets/images/day_planner.png" alt="day planner" />
+            </a>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-md-5 tile">
+            <a href="https://alpinelife37.github.io/Homework4/">
+              <img src="assets/images/coding_quiz.png" alt="coding quiz" />
+            </a>
           </div>
         </div>
       </section>
