--- a/contact.html
+++ b/contact.html
@@ -58,33 +58,30 @@
           <ul>
             <li>
               <label for="name">Name</label>
-              <input
-                type="text"
-                class="form-control"
-                id="name"
-                placeholder="Johnny/Jane Appleseed"
-                required="required"
-              />
+              <div>James Nelson</div>
+            </li>
+
+            <li>
+              <label for="email">Phone</label>
+              <div>(509) 991-6273</div>
             </li>
 
             <li>
               <label for="email">Email</label>
-              <input
-                type="email"
-                id="email"
-                name="email"
-                placeholder="youremail@gmail.com"
-                required="required"
-              />
+              <div>Alpinelife37@gmail.com</div>
             </li>
 
             <li>
-              <label for="message">Message</label>
-              <textarea
-                id="message"
-                name="message"
-                required="required"
-              ></textarea>
+              <label for="message">Linkedin</label>
+              <a href="https://www.linkedin.com/in/james-nelson-2624b4191/"
+                >https://www.linkedin.com/in/james-nelson-2624b4191/</a
+              >
+            </li>
+            <li>
+              <label for="message">Github</label>
+              <a href="https://github.com/alpinelife37/"
+                >https://github.com/alpinelife37/</a
+              >
             </li>
           </ul>
           <button type="submit" class="btn btn-primary">Submit</button>
