add .pdf resume

--- a/contact.html
+++ b/contact.html
@@ -78,6 +78,11 @@
                 >https://github.com/alpinelife37/</a
               >
             </li>
+
+            <li>
+              <label for="message">PDF Resume</label>
+              <a href="https://github.com/alpinelife37/">James Nelson</a>
+            </li>
           </ul>
         </form>
       </section>
