added resume link

--- a/contact.html
+++ b/contact.html
@@ -81,7 +81,10 @@
 
             <li>
               <label for="message">PDF Resume</label>
-              <a href="https://github.com/alpinelife37/">James Nelson</a>
+              <a
+                href="https://github.com/alpinelife37/Homework2/blob/master/assets/Files/resume.pdf"
+                >James Nelson</a
+              >
             </li>
           </ul>
         </form>
